# internal/infra/webserver/handlers/product_handler.go
@@ -43,14 +43,18 @@ func (ph *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) 
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
+	w.Header().Set("Content-Type", "application/json")
 	err = ph.DB.Create(newProduct)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
+		return
 	}
 	w.WriteHeader(http.StatusCreated)
 }
 
-// List Products 	godoc
+// ListProducts 	godoc
 // @Summary 		List products
 // @Description 	Get all products
 // @Tags 			products
@@ -59,7 +63,7 @@ func (ph *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) 
 // @Param 			page query string false "page number"
 // @Param 			limit query string false "limit"
 // @Success 		200 {array} product.Product
-// @Failure 		404 {object} Error
+// @Failure 		404 
 // @Failure 		500 {object} Error
 // @Router 			/products [get]
 // @Security 		ApiKeyAuth
@@ -84,11 +88,25 @@ func (ph *ProductHandler) ListAllProducts(w http.ResponseWriter, r *http.Request
 	err = json.NewEncoder(w).Encode(&products)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusOK)
 }
 
+// GetProduct 		godoc
+// @Summary 		Get a product
+// @Description 	Get a product
+// @Tags 			products
+// @Accpet 			json
+// @Produce 		json
+// @Param 			id path string true "product ID" Format(uuid)
+// @Success 		200 {object} product.Product
+// @Failure 		404
+// @Failure 		500 {object} Error
+// @Router 			/products/{id} [get]
+// @Security 		ApiKeyAuth
 func (ph *ProductHandler) ListProductByID(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	product, err := ph.DB.FindByID(id)
@@ -100,11 +118,26 @@ func (ph *ProductHandler) ListProductByID(w http.ResponseWriter, r *http.Request
 	err = json.NewEncoder(w).Encode(&product)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusOK)
 }
 
+// UpdateProduct 	godoc
+// @Summary 		Update a product
+// @Description 	Update a product
+// @Tags 			products
+// @Accpet 			json
+// @Produce 		json
+// @Param 			id path string true "product ID" Format(uuid)
+// @Param 			request body dto.CreateProductInput true "product request"
+// @Success 		200
+// @Failure 		404
+// @Failure 		500 {object} Error
+// @Router 			/products/{id} [put]
+// @Security 		ApiKeyAuth
 func (ph *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -121,19 +154,36 @@ func (ph *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) 
 		w.WriteHeader(http.StatusNotFound)
 		return
 	}
+	w.Header().Set("Content-Type", "application/json")
 	err = json.NewDecoder(r.Body).Decode(&searchedProduct)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	err = ph.DB.Update(searchedProduct)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusOK)
 }
 
+// DeleteProduct 	godoc
+// @Summary 		Delete a product
+// @Description 	Delete a product
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			id path string true "product ID" Format(uuid)
+// @Success 		200
+// @Failure 		404
+// @Failure 		500 {object} Error
+// @Router 			/products/{id} [delete]
+// @Security 		ApiKeyAuth
 func (ph *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -150,9 +200,12 @@ func (ph *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) 
 		w.WriteHeader(http.StatusNotFound)
 		return
 	}
+	w.Header().Set("Content-Type", "application/json")
 	err = ph.DB.Delete(id)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusOK)
